--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
       <div class="money">
         <img
           class="people"
-          src="../../../../Downloads/home-section (1).png"
-          alt=""
+          src="home-section (1).png"
+          alt="home-section"
         />
       </div>
     </main>
