--- a/index.html
+++ b/index.html
@@ -88,35 +88,35 @@
 
     <article class="peopleArticle">
       <div class="personCard">
-        <img src="../../../../Downloads/ayowole-2.png" alt="" width="200px" />
+        <img src="ayowole-2.png" alt="an image" width="200px" />
         <p>
           Ayowole Adenuga <br />
           Software Engineer Interswitch 🇳🇬
         </p>
       </div>
       <div class="personCard">
-        <img src="../../../../Downloads/silas.png" alt="" width="200px" />
+        <img src="silas.png" alt="an image" width="200px" />
         <p>
           Ayowole Adenuga <br />
           Software Engineer Interswitch 🇳🇬
         </p>
       </div>
       <div class="personCard">
-        <img src="../../../../Downloads/jessica.png" alt="" width="200px" />
+        <img src="jessica.png" alt="an image" width="200px" />
         <p>
           Ayowole Adenuga <br />
           Software Engineer Interswitch 🇳🇬
         </p>
       </div>
       <div class="personCard">
-        <img src="../../../../Downloads/tobi.png" alt="" width="200px" />
+        <img src="tobi.png" alt="" width="200px" />
         <p>
           Ayowole Adenuga <br />
           Software Engineer Interswitch 🇳🇬
         </p>
       </div>
       <div class="personCard">
-        <img src="../../../../Downloads/busayo.png" alt="" width="200px" />
+        <img src="busayo.png" alt="an image" width="200px" />
         <p>
           Ayowole Adenuga <br />
           Software Engineer Interswitch 🇳🇬
