--- a/index.html
+++ b/index.html
@@ -167,21 +167,21 @@
     </p>
 
     <div class="bank">
-      <img src="../../../../Downloads/client-paystack.png" alt="" />
-      <img src="../../../../Downloads/client-opay.png" alt="" />
-      <img src="../../../../Downloads/client-flutterwave.png" alt="" />
-      <img src="../../../../Downloads/client-andela.png" alt="" />
-      <img src="../../../../Downloads/client-reckitt_benckiser.png" alt="" />
-      <img src="../../../../Downloads/client-sterling_bank.png" alt="" />
-      <img src="../../../../Downloads/client-cowrywise.png" alt="" />
-      <img src="../../../../Downloads/client-lifebank.png" alt="" />
-      <img src="../../../../Downloads/client-interswitch.png" alt="" />
-      <img src="../../../../Downloads/client-terragon.png" alt="" />
-      <img src="../../../../Downloads/client-gtbank.png" alt="" />
-      <img src="../../../../Downloads/client-goldman_sachs.png" alt="" />
-      <img src="../../../../Downloads/client-venture_garden.png" alt="" />
-      <img src="../../../../Downloads/client-venture_garden.png" alt="" />
-      <img src="../../../../Downloads/client-interswitch.png" alt="" />
+      <img src="client-paystack.png" alt="an image" />
+      <img src="client-opay.png" alt="an image" />
+      <img src="client-flutterwave.png" alt="an image" />
+      <img src="client-andela.png" alt="an image" />
+      <img src="client-reckitt_benckiser.png" alt="an image" />
+      <img src="client-sterling_bank.png" alt="an image" />
+      <img src="client-cowrywise.png" alt="an image" />
+      <img src="client-lifebank.png" alt="an image" />
+      <img src="client-interswitch.png" alt="an image" />
+      <img src="client-terragon.png" alt="an image" />
+      <img src="client-gtbank.png" alt="an image" />
+      <img src="client-goldman_sachs.png" alt="an image" />
+      <img src="client-venture_garden.png" alt="an image" />
+      <img src="client-venture_garden.png" alt="an image" />
+      <img src="client-interswitch.png" alt="an image " />
     </div>
     <div class="ready">
       <p class="talk">Ready to talk? <br />We're here to help.</p>
