--- a/index.html
+++ b/index.html
@@ -123,21 +123,21 @@
         </p>
       </div>
       <div class="personCard">
-        <img src="../../../../Downloads/chinonso-2.png" alt="" width="200px" />
+        <img src="chinonso-2.png" alt="" width="200px" />
         <p>
           Ayowole Adenuga <br />
           Software Engineer Interswitch 🇳🇬
         </p>
       </div>
       <div class="personCard">
-        <img src="../../../../Downloads/ayowole-2.png" alt="" width="200px" />
+        <img src="ayowole-2.png" alt="" width="200px" />
         <p>
           Ayowole Adenuga <br />
           Software Engineer Interswitch 🇳🇬
         </p>
       </div>
       <div class="personCard">
-        <img src="../../../../Downloads/silas.png" alt="" width="200px" />
+        <img src="silas.png" alt="" width="200px" />
         <p>
           Ayowole Adenuga <br />
           Software Engineer Interswitch 🇳🇬
@@ -153,7 +153,7 @@
         platform to jump start my career.”
       </p>
       <div class="meji">
-      <img class="meat" src="../../../../Downloads/silas.png" alt="" width="200px" />
+      <img class="meat" src="silas.png" alt="" width="200px" />
       <p class="silas">Silas Onmbayugh</p> <br><br><p class="vivi">PRODUCT DESIGNER, CANVA</p>
       
       </div>
