--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
       <div class="barbie">
         <!-- Left-Aligned Logo and Contact Information -->
         <div class="contact-info">
-          <img src="logo.png" alt="Company Logo" class="logo" />team@stutern.com
+          <img src="fish-removebg-preview.png" alt="Company Logo" class="logo" />team@stutern.com
           <br />
           +234-904-832-0099
           <!-- Logo image -->
